# -

./: CMakeLists.txt  README.md  main.cpp
include/: DataBase.h  DisplayClock.h  MyWindow.h  Picture.h  Recognition.h
include/easypr/: config.h
src/: DataBase.cpp  DisplayClock.cpp  MyWindow.cpp  Picture.cpp  Recognition.cpp  main.cpp
